--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 </head>
 <title> BASICS </title>
 <body>
-    <h1>My first site</h1>
+    <h1>My first site with GitHub!</h1>
     <h2>Here is an h2 text</h2>
     <div style="text-align:center">Here is a div</div>
     <p>Here is a paragraph</p>
