--- a/services.html
+++ b/services.html
@@ -26,7 +26,7 @@
             <div class="boxcontent testimonials" style="padding-top: 20px;">
                 <table>
                     <tr><th style="font-size: 35px;">1. Meet Your Team</th></tr>
-                    <tr><td><img src="team.png" style="width:500px; height:300px"></td></tr>
+                    <tr><td><img src="team.png" style="width:100%; max-width:500px; height:auto"></td></tr>
                     <tr><td>We will get to know you through a 30-minute phone call and a meeting in person.<br/>
                     Based on your goals and expertise, we will assign you a team that maximizes your chance
                     of getting into the school of your dreams.</td></tr>
@@ -35,7 +35,7 @@
             <div class="boxcontent testimonials" style="padding-top: 20px;">
                 <table>
                     <tr><th style="font-size: 35px;">2. Develop Your Edge</th></tr>
-                    <tr><td><img src="edge.png" style="width:500px; height:300px"></td></tr>
+                    <tr><td><img src="edge.png" style="width:100%; max-width:500px; height:auto"></td></tr>
                     <tr><td>Your team will help you develop your academic interests, engage in unique extracurricular activities,
                         strengthen your personal qualities, hone your leadership skills,
                         and ultimately, position you to get into the best schools possible.</td></tr>
@@ -44,7 +44,7 @@
             <div class="boxcontent testimonials" style="padding-top: 20px;">
                 <table>
                     <tr><th style="font-size: 35px;">3. Tell Your Story</th></tr>
-                    <tr><td><img src="story.png" style="width:500px; height:300px"></td></tr>
+                    <tr><td><img src="story.png" style="width:100%; max-width:500px; height:auto"></td></tr>
                     <tr><td>Bridging the gap between who you are and how you appear on paper takes serious work.<br/>
                         From creating a school list to editing essays to interview prep,
                         our counselors will guide you every step of the way.</td></tr>
@@ -53,7 +53,7 @@
             <div class="boxcontent testimonials" style="padding-top: 20px;">
                 <table>
                     <tr><th style="font-size: 35px;">4. Earn Your Acceptance</th></tr>
-                    <tr><td><img src="acceptance.png" style="width:500px; height:300px"></td></tr>
+                    <tr><td><img src="acceptance.png" style="width:100%; max-width:500px; height:auto"></td></tr>
                     <tr><td>No matter which university you aspire to, if you want to maximize your chances, we’re here to help.<br/>
                         We’ve done it thousands of times before, and we’re ready to do it again. It’s your turn.</td></tr>
                 </table>
