--- a/landing.html
+++ b/landing.html
@@ -16,7 +16,7 @@
                 }
 
                 #landingtext{
-                    flex-basis: 100%;
+                    flex:1;
                 }
 
                 table th {text-align: center; font-size:80px; font-family: sans-serif; color:#50514F}
