--- a/landing.html
+++ b/landing.html
@@ -7,16 +7,16 @@
             <style type = "text/css">
                 #landingBox{
                     display: flex;
-                    width:100%;font-size:25px; color: #FFFCFF;
+                    width:100%; color: #FFFCFF;
                     background-image: linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)), url("jpeg-optimizer_scott-graham-5fNmWej4tAA-unsplash-min.jpg");
                     text-align: left; font-family: sans-serif;
                     padding-top: 50px; padding-left: 50px;
-                    background-size:cover; background-position: 0 100%; height:450px;
+                    background-size:cover; background-position: 0 100%;
                     box-sizing: border-box;
                 }
 
                 #landingtext{
-                    flex:1;
+                    flex: 1; font-size:25px;
                 }
 
                 table th {text-align: center; font-size:80px; font-family: sans-serif; color:#50514F}
