--- a/landing.html
+++ b/landing.html
@@ -10,7 +10,7 @@
                     width:100%; color: #FFFCFF;
                     background-image: linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)), url("jpeg-optimizer_scott-graham-5fNmWej4tAA-unsplash-min.jpg");
                     text-align: left; font-family: sans-serif;
-                    padding-top: 50px; padding-left: 50px;
+                    padding:50px 20px 50px 20px;
                     background-size:cover; background-position: 0 100%;
                     box-sizing: border-box;
                 }
