--- a/landing.html
+++ b/landing.html
@@ -73,38 +73,27 @@
                 </div>
             </div>
 
-            <div class="flexbox">
-                <div class="pagetitle" style="padding-top: 20px;"> Testimonials</div>
-                <div class="boxcontent testimonials">
-                    <table cellpadding = "20" cellspacing = "2">
-                        <tr><td><img src="new headshot.png" style="width:230px; height:230px;"><td>
-                            <div style="font-style: italic;">
-                            "A great company with a great vision. Trusting them was the best decision."</div>
-                            <div style="color:#8E9389; font-weight: lighter; text-align: right;">- Melissa</div>
-                        </tr>
-                    </table>
+            <div class="pagetitle" style="padding-top: 20px;"> Testimonials</div>
+
+            <div class="container">
+                <div class="row">
+                       <div class="cell"> <img src="new headshot.png" style="width:230px; height:auto"></div>
+                        <div class="cell" style="font-style: italic;">
+                        Mel<br/>"A great company with a great vision. Trusting them was the best decision."</div>
                 </div>
 
-                <div class="boxcontent testimonials">
-                    <table cellpadding = "20" cellspacing = "2">
-                        <tr><td><img src="woman headshot.png" style="width:230px; height:230px"><td>
-                            <div style="font-style: italic;">
-                            "Our journey to Princeton was made possible by Accepted's support and guidance."</div>
-                            <div style="color:#8E9389; font-weight: lighter; text-align: right;">- Stefani</div>
-                        </tr>
-                    </table>
-                </div>
+                <div class="row">
+                    <div class="cell"> <img src="woman headshot.png" style="width:230px; height:auto"></div>
+                     <div class="cell" style="font-style: italic;">
+                       Stefani<br/> "Our journey to Princeton was made possible by Accepted's support and guidance."</div>
+             </div>
 
-                <div class="boxcontent testimonials">
-                    <table cellpadding = "20" cellspacing = "2">
-                        <tr><td><img src="man headshot.png" style="width:230px; height:230px;"><td>
-                            <div style="font-style: italic;">
-                            "Thanks to Accepted, my child's dream of attending MIT became a reality.<br/>
-                            Their personalized approach and expertise were invaluable every step of the way."</div>
-                            <div style="color:#8E9389; font-weight: lighter; text-align: right;">- Jack</div>
-                        </tr>
-                    </table>
-                </div>
+             <div class="row">
+                <div class="cell"> <img src="man headshot.png" style="width:230px; height:auto"></div>
+                 <div class="cell" style="font-style: italic;">
+                    Jack<br/>"Thanks to Accepted, my child's dream of attending MIT became a reality.<br/>
+                    Their personalized approach and expertise were invaluable every step of the way."</div>
+         </div>
             </div>
             <div id = "footer">
                 Book a 20-minute consultation session with Accepted today!</br>
