--- a/about.html
+++ b/about.html
@@ -28,11 +28,11 @@
                 Their company, born from a desire to level the playing field, empowers students of all backgrounds to pursue academic dreams confidently.
             </div>
 
-            <div class="pagetitle" style="padding-top: 20px;">
+            <div class="pagetitle" style="padding-top: 20px; padding-bottom: 20px;">
                 Meet Our Team
             </div>
 
-            <div class="pagesumtext">
+            <div class="pagesumtext" style="padding-bottom: 30px;">
                 Equipped with a team of experts who specializes in college counseling, you will be in good hands.
             </div>
 
