--- a/landing.html
+++ b/landing.html
@@ -89,7 +89,7 @@
              </div>
 
              <div class="row">
-                <div class="cell"> <img src="man headshot.png" style="width:230px; height:auto"></div>
+                <div class="cell"> <img src="man headshot1.png" style="width:230px; height:auto"></div>
                  <div class="cell" style="font-style: italic;">
                     Jack<br/>"Thanks to Accepted, my child's dream of attending MIT became a reality.<br/>
                     Their personalized approach and expertise were invaluable every step of the way."</div>
